Squishing bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ h4 {
 
 h6 {
   font-size: 12pt;
-  color: rgba(252,186,3,255);
+  color: rgba(252,186,3,1);
   font-family: 'Inter', sans-serif;
 }
 
@@ -236,7 +236,7 @@ hr {
 .postTitleAndDesc{
   grid-column: 1;
   grid-row: 1;
-  word-break: break-word;
+  word-wrap: break-word;
   width:100%;
 }
 
